<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NameField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp">

        <RadioButton
            android:id="@+id/RBPrep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/RBStud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textSize="16sp"/>
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:enabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/StatusField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:endIconMode="password_toggle"
        app:helperText="Длина пароля должна быть от 6 до 12 символов"
        app:helperTextEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PassField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/confirm_password"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RPassField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/positiveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="14dp"
        android:text="@string/registration"
        app:backgroundTint="@color/positive" />

</LinearLayout>